src/test/06-Errors/error-public-class-ext-var2.txt
error-public-class-ext-var2.ck:12:9: error: cannot use local variable 'foo' from within a public class
[12]     <<< foo + 5 >>>;
             ^
